refs #4338 fix list items are not visible

--- a/plugins/CorePluginsAdmin/stylesheets/marketplace.less
+++ b/plugins/CorePluginsAdmin/stylesheets/marketplace.less
@@ -231,6 +231,11 @@
     color: #000000;
   }
 
+  .ui-tabs-panel ul, .ui-tabs-panel ol {
+    list-style: initial;
+    padding-left: 20px;
+  }
+
   .content .updateAvailableNotice {
     font-size: 14px;
     padding: 10px;
